--- a/index.html
+++ b/index.html
@@ -186,5 +186,7 @@
       }catch(e){ alert('Email: joe@kaztech99.com'); }
     });
   </script>
+  <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
