--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KazTech — IT Solutions</title>
+  <link rel="icon" type="image/png" href="KT1.png">
   <meta name="description" content="KazTech offers friendly, reliable IT support for small businesses: PCs, backups, networking, email, Microsoft 365, QuickBooks, and more." />
   <meta property="og:title" content="KazTech — IT Solutions" />
   <meta property="og:description" content="Fast, friendly IT support. Email joe@kaztech99.com" />
@@ -189,4 +190,5 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
