--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     .logo svg{width:44px; height:44px; filter:drop-shadow(var(--glow))}
     .brand{font-weight:800; letter-spacing:.3px}
     .brand span{display:block; line-height:1}
-    .brand .name{font-size:1.25rem}
+   /* .brand .name{font-size:1.25rem} */
+    .brand .name{font-size: clamp(2rem, 4vw + 0.5rem, 4rem);}
     .brand .tag{font-size:.78rem; color:var(--muted)}
 
     /* Hero */
@@ -190,5 +191,6 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
