--- a/contact.html
+++ b/contact.html
@@ -60,44 +60,8 @@
       <p>Tell me what’s going on and how to reach you. I usually reply the same day.</p>
 
       <!-- Replace YOUR_FORM_ID with your Formspree ID (like xzbwqxyz) -->
-      <form id="contact" action="https://formspree.io/f/YOUR_FORM_ID" method="POST" novalidate>
-        <div class="row">
-          <div>
-            <label for="name">Name*</label>
-            <input id="name" name="name" type="text" placeholder="Jane Doe" required />
-          </div>
-          <div>
-            <label for="email">Email*</label>
-            <input id="email" name="email" type="email" placeholder="you@example.com" required />
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label for="phone">Phone (optional)</label>
-            <input id="phone" name="phone" type="tel" placeholder="(555) 123‑4567" />
-          </div>
-          <div>
-            <label for="subject">Subject</label>
-            <input id="subject" name="subject" type="text" placeholder="PC won’t boot / Email deliverability / …" />
-          </div>
-        </div>
-        <div>
-          <label for="message">Message*</label>
-          <textarea id="message" name="message" placeholder="A quick description helps me prep before I reply." required></textarea>
-        </div>
-
-        <!-- Honeypot field for spam bots -->
-        <input class="hp" type="text" name="company" tabindex="-1" autocomplete="off" />
-
-        <!-- Where to send replies from (helps Formspree reply-to) -->
-        <input type="hidden" name="_replyto" value="{{email}}" />
-        <input type="hidden" name="_subject" value="New message from kaztech99.com" />
-
-        <button class="btn" type="submit">Send message</button>
-        <div id="ok" class="alert ok" role="status">Thanks! Your message has been sent.</div>
-        <div id="err" class="alert err" role="alert">Hmm, something went wrong. Please email <a href="mailto:joe@kaztech99.com">joe@kaztech99.com</a>.</div>
-        <p class="note">By submitting, you agree to be contacted about your request. No newsletters, no spam.</p>
-      </form>
+    <iframe aria-label='Contact Form' frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.com/kaztech1/form/ContactForm/formperma/8iVZDNYNZfaZdwmKBxi6OH9uBUFgM-smjbd5s97Sc_A'></iframe>
+      
     </div>
 
     <footer>
@@ -144,3 +108,4 @@
   </script>
 </body>
 </html>
+
