--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </svg>
         <div class="brand">
           <span class="name">KazTech</span>
-          <span class="tag">Practical IT for real people</span>
+          <span class="tag">IT Support & Consulting</span>
         </div>
       </a>
     </header>
@@ -192,3 +192,4 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
