--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </section>
 
     <footer>
-      © <span id="y"></span> KazTech. Built with a healthy fear of data loss.
+      © <span id="y"></span> KazTech. Turning it off and on since 1999.
     </footer>
   </div>
 
@@ -192,4 +192,5 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
