--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
         <div class="card">
           <h3>Accounting Apps</h3>
-          <p>QuickBooks installs, admin/run‑as quirks, PDF/printer fixing, and data moves that don’t lose your files.</p>
+          <p>QuickBooks installs, PDF/printer fixing, and data moves that don’t lose your files.</p>
         </div>
         <div class="card">
           <h3>Networking</h3>
@@ -192,5 +192,6 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
