--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="grid">
         <div class="card">
           <h3>Workstations & Laptops</h3>
-          <p>Clean installs, migrations from old drives, SSD upgrades, driver/firmware updates, and Windows tuning so things stop freezing.</p>
+          <p>Clean installs, migrations from old drives, SSD upgrades, driver/firmware updates, and Windows tuning so you can focus on work.</p>
         </div>
         <div class="card">
           <h3>Email & M365</h3>
@@ -192,6 +192,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
