--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
     .mark{position:relative}
     .mark::after{content:"KT"; position:absolute; inset:auto 0 -18px auto; font-weight:900; font-size:120px; opacity:.04; letter-spacing:6px; pointer-events:none}
   </style>
+<meta name="title" content="KazTech - Practical IT Support in Cleveland">
+<meta name="description" content="KazTech provides reliable IT support, PC repair, email setup, and network troubleshooting for small businesses around Cleveland.">
+<meta name="keywords" content="KazTech, Kaz Tech, KazTech99, IT Support Cleveland, small business IT, Joe Krajewski, tech help, computer repair, network setup, QuickBooks support, Veeam backups">
+<meta name="author" content="Joe Krajewski">
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://kaztech99.com/">
+
 </head>
 <body>
   <div class="wrap">
@@ -192,6 +199,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
