--- a/index.html
+++ b/index.html
@@ -83,7 +83,29 @@
 <meta name="author" content="Joe Krajewski">
 <meta name="robots" content="index, follow">
 <link rel="canonical" href="https://kaztech99.com/">
-
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "KazTech",
+  "url": "https://kaztech99.com",
+  "logo": "https://kaztech99.com/KT1.png",
+  "image": "https://kaztech99.com/KT1.png",
+  "description": "Reliable IT support, PC repair, and email/network setup in the Cleveland area.",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Cleveland",
+    "addressRegion": "OH",
+    "addressCountry": "US"
+  },
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "email": "joe@kaztech99.com",
+    "contactType": "customer support"
+  }
+}
+</script>
+ 
 </head>
 <body>
   <div class="wrap">
@@ -199,6 +221,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
