--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
       <p>Tell me what’s going on and how to reach you. I usually reply the same day.</p>
 
       <!-- Replace YOUR_FORM_ID with your Formspree ID (like xzbwqxyz) -->
-      <form id="contact" action="https://formspree.io/f/YOUR_FORM_ID" method="POST" novalidate>
+      <form id="contact" action="https://formspree.io/f/mnngwbrw" method="POST" novalidate>
         <div class="row">
           <div>
             <label for="name">Name*</label>
@@ -144,3 +144,4 @@
   </script>
 </body>
 </html>
+
