--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
         </div>
         <div>
           <button id="copy" class="copy" aria-label="Copy email address">📋 <span>Copy email</span></button>
-          <a class="btn btn-primary" href="mailto:joe@kaztech99.com?subject=KazTech%20help">Start an email</a>
+         
+          <a class="btn btn-primary" href="/contact.html">Contact Form</a>
         </div>
       </div>
     </section>
@@ -221,6 +222,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
