--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
       <div class="contact-inner">
         <div>
           <h3 style="margin:.2em 0 .2em">Let’s fix your thing.</h3>
-         <div style="color:var(--muted)">Email <b><a href="mailto:joe@kaztech99.com" style="color:inherit; text-decoration:underline;">joe@kaztech99.com</a></b> and tell me what’s going on.</div>
+         <div style="color:var(--muted)">Email <b><a href="mailto:joe@kaztech99.com" style="color:inherit; text-decoration:underline;">joe@kaztech99.com</a></b> and tell me what’s going on. You can also use the contact form.</div>
         </div>
         <div>
-          <button id="copy" class="copy" aria-label="Copy email address">📋 <span>Copy email</span></button>
+         <!-- <button id="copy" class="copy" aria-label="Copy email address">📋 <span>Copy email</span></button> -->
          
           <a class="btn btn-primary" href="/contact.html">Contact Form</a>
         </div>
@@ -222,6 +222,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
