--- a/index.html
+++ b/index.html
@@ -112,19 +112,13 @@
     <header>
       <a class="logo" href="#" aria-label="KazTech home">
         <!-- Stylized KT icon -->
-        <svg viewBox="0 0 64 64" aria-hidden="true" role="img">
-          <defs>
-            <linearGradient id="g" x1="0" x2="1" y1="0" y2="1">
-              <stop offset="0%" stop-color="#00b3ff"/>
-              <stop offset="100%" stop-color="#6ee7ff"/>
-            </linearGradient>
-          </defs>
-          <rect x="6" y="6" width="52" height="52" rx="14" fill="none" stroke="url(#g)" stroke-width="3"/>
-          <path d="M18 43V21l9 10-9 12zm15.5-22H42m-8.5 10H42m-8.5 12H42" stroke="url(#g)" stroke-width="3" stroke-linecap="round" fill="none"/>
-        </svg>
-        <div class="brand">
-          <span class="name">KazTech</span>
-          <span class="tag">IT Support & Consulting</span>
+       
+       <div class="brand" style="display:flex; align-items:center; gap:10px;">
+       <img src="KT1.png" alt="KazTech logo" style="height:48px; width:auto;" />
+       <div>
+        <span class="name">KazTech</span><br>
+        <span class="tag">IT Support & Consulting</span>
+        </div>
         </div>
       </a>
     </header>
@@ -222,6 +216,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
