--- a/index.html
+++ b/index.html
@@ -113,13 +113,15 @@
       <a class="logo" href="#" aria-label="KazTech home">
         <!-- Stylized KT icon -->
        
-       <div class="brand" style="display:flex; align-items:center; gap:10px;">
-       <img src="KT1.png" alt="KazTech logo" style="height:48px; width:auto;" />
-       <div>
-        <span class="name">KazTech</span><br>
-        <span class="tag">IT Support & Consulting</span>
-        </div>
-        </div>
+  <div class="brand" style="display:flex; align-items:center; gap:12px;">
+  <img src="KT1.png" alt="KazTech logo" style="height:64px; width:auto; display:block;" />
+  <div style="display:flex; flex-direction:column; line-height:1; margin-top:-6px;">
+    <span class="name" style="margin:0;">KazTech</span>
+    <span class="tag" style="margin-top:4px;">IT Support & Consulting</span>
+  </div>
+</div>
+
+        
       </a>
     </header>
 
@@ -216,6 +218,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
