--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <h1>Fix what’s broken. Secure what matters. <br/>Keep your <em>tech</em> out of your way.</h1>
         <p>
           I help small businesses around Cleveland keep PCs, email, and networks running smoothly.
-          Backups that actually restore, QuickBooks that opens when you need it, and security that
+          Backups that actually restore, software that opens when you need it, and security that
           doesn’t annoy your users.
         </p>
         <div class="cta">
@@ -218,6 +218,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
