--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </div>
         <div class="card">
           <h3>Networking</h3>
-          <p>Routers, Wi‑Fi tuning, VLANs, OpenVPN, DNS. Remote support that’s secure and painless for end‑users.</p>
+          <p>Routers, Wi‑Fi tuning, OpenVPN, DNS. Remote support that’s secure and painless for end‑users.</p>
         </div>
         <div class="card">
           <h3>Ad‑hoc Support</h3>
@@ -218,6 +218,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
