--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="pill">Fast response <span class="dot"></span> Remote & onsite <span class="dot"></span> Small‑biz friendly</div>
         <h1>Fix what’s broken. Secure what matters. <br/>Keep your <em>tech</em> out of your way.</h1>
         <p>
-          I help individuals and small businesses around Cleveland keep PCs, email, and networks running smoothly.
+          For over 25 years I've helped individuals and small businesses around Cleveland keep PCs, email, and networks running smoothly.
           Backups that actually restore, software that opens when you need it, and security that
           doesn’t annoy your users.
         </p>
@@ -218,6 +218,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
