--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
         <button class="btn" type="submit">Send message</button>
         <div id="ok" class="alert ok" role="status">Thanks! Your message has been sent.</div>
         <div id="err" class="alert err" role="alert">Hmm, something went wrong. Please email <a href="mailto:joe@kaztech99.com">joe@kaztech99.com</a>.</div>
-        <p class="note">By submitting, you agree to be contacted about your request. No newsletters, no spam.</p>
+        <p class="note">By submitting, you agree to be contacted by Joe about your request. No newsletters, no spam.</p>
       </form>
     </div>
 
@@ -144,4 +144,5 @@
   </script>
 </body>
 </html>
+
 
