--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://kaztech99.com" />
   <meta name="theme-color" content="#0ea5ff" />
+  <link rel="preload" as="image" href="KT1.png" fetchpriority="high">
   <style>
     :root{
       --bg:#06070a;          /* near‑black */
@@ -218,6 +219,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
