Updated list index.html

--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
       </div>
       <div>
         <div class="card" style="padding:22px">
-          <h3 style="margin-top:0">Quick hits I handle</h3>
+          <h3 style="margin-top:0">Common IT fixes I handle</h3>
           <ul style="margin:.2em 0 0; padding-left:18px; color:var(--muted)">
-            <li>PC refresh & Windows 10→11 upgrades</li>
-            <li>Microsoft 365 & custom‑domain email</li>
-            <li>QuickBooks installs, printing & PDF fixes</li>
+            <li>PC refreshes, Windows installs & upgrades</li>
+            <li>Microsoft 365, custom email domains & migration help</li>
+            <li>QuickBooks setup, data recovery & troubleshooting</li>
             <li>Veeam backups & file restores</li>
-            <li>SPF/DKIM/DMARC email deliverability</li>
-            <li>Routers, Wi‑Fi, VPN, remote access</li>
+            <li>SPF / DKIM / DMARC setup for clean email delivery</li>
+            <li>Network troubleshooting — routers, Wi-Fi, VPN & remote access</li>
           </ul>
         </div>
       </div>
@@ -219,6 +219,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
