--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
         </div>
         <div class="card">
           <h3>Email & M365</h3>
-          <p>Custom domains that don’t hit spam: Zoho/365 setup, SPF/DKIM/DMARC, Outlook profile repair, shared mailboxes, aliases.</p>
+          <p>Custom domain creation and setup, Zoho/M365 management and setup, SPF/DKIM/DMARC, Outlook profile repair.</p>
         </div>
         <div class="card">
           <h3>Backups that Restore</h3>
-          <p>Veeam Agent and NAS targets, recovery media, and test restores so you know it works before you need it.</p>
+          <p>Veeam backups, file restores & NAS maintenance. Carbonite and cloud based backups.</p>
         </div>
         <div class="card">
           <h3>Accounting Apps</h3>
@@ -175,7 +175,7 @@
         </div>
         <div class="card">
           <h3>Networking</h3>
-          <p>Routers, Wi‑Fi tuning, OpenVPN, DNS. Remote support that’s secure and painless for end‑users.</p>
+          <p>Routers, Wi‑Fi, OpenVPN, DNS. Remote support that’s secure and painless for end‑users.</p>
         </div>
         <div class="card">
           <h3>Ad‑hoc Support</h3>
@@ -219,6 +219,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
