--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         </div>
         <div class="card">
           <h3>Email & M365</h3>
-          <p>Custom domain creation and setup, Zoho/M365 management and setup, SPF/DKIM/DMARC, Outlook profile repair.</p>
+          <p>Custom domain creation and setup, Zoho/M365 management, SPF/DKIM/DMARC, Outlook profile repair.</p>
         </div>
         <div class="card">
           <h3>Backups that Restore</h3>
@@ -219,6 +219,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
