--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
         <div class="card">
           <h3>Accounting Apps</h3>
-          <p>QuickBooks installs, PDF/printer fixing, and data moves that don’t lose your files.</p>
+          <p>QuickBooks installs & troubleshooting. Client\Server setup and data moves.</p>
         </div>
         <div class="card">
           <h3>Networking</h3>
@@ -219,6 +219,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
