--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <section class="contact">
       <div class="contact-inner">
         <div>
-          <h3 style="margin:.2em 0 .2em">Let’s fix your thing.</h3>
+          <h3 style="margin:.2em 0 .2em">Let’s get it working.</h3>
          <div style="color:var(--muted)">Email <b><a href="mailto:joe@kaztech99.com" style="color:inherit; text-decoration:underline;">joe@kaztech99.com</a></b> or use the contact form to tell me what’s going on.</div>
         </div>
         <div>
@@ -219,6 +219,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
