pill 3 index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     @media (max-width:900px){.hero{grid-template-columns:1fr; padding:36px 0}}
     .hero h1{font-size:clamp(1.8rem, 3.2vw + 1rem, 3.2rem); line-height:1.1; margin:.1em 0 .4em}
     .hero p{color:var(--muted); font-size:1.05rem}
-    .pill{display:flex;align-items:center;justify-content:center;flex-wrap:wrap;gap:10px;padding:8px 12px;margin:10px auto 22px;border:1px solid rgba(110,231,255,.18);border-radius:999px;background:linear-gradient(to right,rgba(0,179,255,.08),rgba(14,165,255,.04));box-shadow:var(--glow);max-width:95%;}.pill .dot{margin:0 2px;}.pill .pill-item{white-space:nowrap;}@media(max-width:480px){.pill{flex-wrap:nowrap;font-size:0.9rem;gap:6px;}}
+    .pill{display:flex;align-items:center;justify-content:center;flex-wrap:wrap;gap:10px;padding:8px 12px;margin:10px auto 22px;border:1px solid rgba(110,231,255,.18);border-radius:999px;background:linear-gradient(to right,rgba(0,179,255,.08),rgba(14,165,255,.04));box-shadow:var(--glow);max-width:95%;}.pill .dot{width:6px;height:6px;background:#00b3ff;border-radius:50%;display:inline-block;}.pill .pill-item{white-space:nowrap;}@media(max-width:480px){.pill{flex-wrap:wrap;font-size:0.9rem;gap:8px;}.pill .dot{width:5px;height:5px;margin:0 2px;}}
     .cta{display:flex; gap:12px; flex-wrap:wrap}
     .btn{cursor:pointer; border:none; border-radius:14px; padding:14px 18px; font-weight:700; letter-spacing:.2px}
     .btn-primary{background:linear-gradient(135deg, var(--accent), #3ecbff); color:#001018; box-shadow:0 8px 24px rgba(0,179,255,.25)}
@@ -219,4 +219,5 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
