--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="pill">  <span class="pill-item">Fast response</span><span class="dot"></span>  <span class="pill-item">Remote & onsite</span><span class="dot"></span>  <span class="pill-item">Small-biz friendly</span> </div>
         <h1>Fix what’s broken. Secure what matters. <br/>Keep your <em>tech</em> out of your way.</h1>
         <p>
-          For over 25 years I've helped individuals and businesses around Cleveland keep PCs, email, and networks running smoothly.
+          For over 25 years I've helped individuals and businesses around Cleveland keep PCs, email and networks running smoothly.
           Backups that actually restore, software that opens when you need it, and security that
           doesn’t annoy your users.
         </p>
@@ -219,6 +219,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
