--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KazTech — IT Solutions</title>
   <link rel="icon" type="image/png" href="KT1.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <meta name="description" content="KazTech offers friendly, reliable IT support for small businesses: PCs, backups, networking, email, Microsoft 365, QuickBooks, and more." />
   <meta property="og:title" content="KazTech — IT Solutions" />
   <meta property="og:description" content="Fast, friendly IT support. Email joe@kaztech99.com" />
@@ -219,6 +223,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
