--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <li>QuickBooks setup, data recovery & troubleshooting</li>
             <li>Veeam backups & file restores</li>
             <li>SPF / DKIM / DMARC setup for clean email delivery</li>
-            <li>Network troubleshooting — routers, Wi-Fi, VPN & remote access</li>
+            <li>Network troubleshooting - routers, Wi-Fi, VPN & remote access</li>
           </ul>
         </div>
       </div>
@@ -223,6 +223,7 @@
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e01c86ecf4834c96ad9875aa290d9fb2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
+
 
 
 
