--- a/pricing.html
+++ b/pricing.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact KazTech</title>
-  <meta name="description" content="Contact KazTech for fast, friendly small‑business IT help: PCs, email, backups, networking, and more." />
+  <title>KazTech Pricing &amp; Contracts</title>
+  <meta name="description" content="KazTech Pricing &amp; Contracts" />
   <link rel="icon" type="image/png" href="KT1.png" />
   <style>
     :root{
@@ -100,9 +100,9 @@
     <!-- Ad‑Hoc -->
     <section class="card">
       <span class="badge">Ad‑Hoc Support (no contract)</span>
-      <div class="price">$95<span class="unit">/hour • 30‑min min • 15‑min billing</span></div>
+      <div class="price">$95<span class="unit">/hour • 30‑min minimum • 15‑min billing increments</span></div>
       <ul>
-        <li><span class="dot"></span><span>Phone, email, and remote assistance when you need it.</span></li>
+        <li><span class="dot"></span><span>Phone, email, remote assistance and onsite support when you need it.</span></li>
         <li><span class="dot"></span><span>After‑hours & weekends billed at <strong>1.5×</strong> the standard rate.</span></li>
         <li><span class="dot"></span><span>Projects, migrations, and extended onsite quoted separately.</span></li>
         <li><span class="dot"></span><span>Priority is always given to contract clients.</span></li>
@@ -125,7 +125,7 @@
           <li><span class="dot"></span><span>Priority scheduling ahead of non‑contract clients.</span></li>
           <li><span class="dot"></span><span>Onsite available at discounted <strong>$65/hr</strong> (1‑hr minimum).</span></li>
           <li><span class="dot"></span><span>After‑hours onsite billed at <strong>1.5×</strong>.</span></li>
-          <li><span class="dot"></span><span>20‑mile service radius included; beyond that <strong>$1/mile</strong> round‑trip.</span></li>
+          <li><span class="dot"></span><span>35‑mile service radius included; beyond that <strong>$1/mile</strong> round‑trip.</span></li>
           <li><span class="dot"></span><span>Response targets: Critical 1 hr • High 4 hrs • Normal same day • Low next business day.</span></li>
         </ul>
         <div class="cta">
@@ -159,7 +159,7 @@
           <li><span class="dot"></span><span><strong>Monthly credit:</strong> $65 onsite service credit added each billing cycle while enrolled in Hybrid. Applied to onsite labor only.</span></li>
           <li><span class="dot"></span><span><strong>Rollover:</strong> Unused credits roll for up to 3 consecutive months; the oldest credit expires as a new month is added. <em>Maximum balance $195.</em></span></li>
           <li><span class="dot"></span><span><strong>Limits:</strong> Not redeemable for cash, non‑transferable, and not applicable to projects, parts, or third‑party fees.</span></li>
-          <li><span class="dot"></span><span><strong>Travel:</strong> First 20 miles included per visit; beyond that billed at $1/mile.</span></li>
+          <li><span class="dot"></span><span><strong>Travel:</strong> First 35 miles included per visit; beyond that billed at $1/mile.</span></li>
         </ul>
       </details>
     </section>
@@ -182,4 +182,5 @@
   </main>
 </body>
 </html>
+
 
