--- a/pricing.html
+++ b/pricing.html
@@ -129,8 +129,8 @@
           <li><span class="dot"></span><span>Response targets: Critical 1 hr • High 4 hrs • Normal same day • Low next business day.</span></li>
         </ul>
         <div class="cta">
-          <a class="btn" href="mailto:support@kaztech99.com?subject=Sign%20up%20for%20Remote‑First">Get Remote‑First</a>
-          <a class="btn alt" href="#hybrid-notes">Read plan details</a>
+          <a class="btn" href="mailto:joe@kaztech99.com?subject=Sign%20up%20for%20Remote‑First">Get Remote‑First</a>
+         <!-- <a class="btn alt" href="#hybrid-notes">Read plan details</a> -->
         </div>
       </article>
 
@@ -145,7 +145,7 @@
           <li><span class="dot"></span><span>Priority scheduling for onsite work.</span></li>
         </ul>
         <div class="cta">
-          <a class="btn" href="mailto:support@kaztech99.com?subject=Sign%20up%20for%20Hybrid">Get Hybrid</a>
+          <a class="btn" href="mailto:joe@kaztech99.com?subject=Sign%20up%20for%20Hybrid">Get Hybrid</a>
           <a class="btn alt" href="#hybrid-notes">How the credit works</a>
         </div>
       </article>
@@ -177,10 +177,11 @@
     </section>
 
     <footer>
-      <div>KazTech LLC • North Royalton, OH • <a href="mailto:support@kaztech99.com">support@kaztech99.com</a></div>
+      <div>KazTech LLC • North Royalton, OH • <a href="mailto:joe@kaztech99.com">joe@kaztech99.com</a></div>
     </footer>
   </main>
 </body>
 </html>
+
 
 
