--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
     </div>
 
     <footer>
-      © <span id="y"></span> KazTech — Cleveland, OH
+      © <span id="y"></span> KazTech — North Royalton, OH
     </footer>
   </div>
 
@@ -144,5 +144,6 @@
   </script>
 </body>
 </html>
+
 
 
