--- a/pricing.html
+++ b/pricing.html
@@ -108,7 +108,7 @@
         <li><span class="dot"></span><span>Priority is always given to contract clients.</span></li>
       </ul>
       <div class="cta">
-        <a class="btn" href="mailto:support@kaztech99.com?subject=Ad‑Hoc%20Support%20Request">Request Ad‑Hoc Help</a>
+        <a class="btn" href="mailto:joe@kaztech99.com?subject=Ad‑Hoc%20Support%20Request">Request Ad‑Hoc Help</a>
         <a class="btn alt" href="#plans">Compare monthly plans</a>
       </div>
     </section>
@@ -182,6 +182,7 @@
   </main>
 </body>
 </html>
+
 
 
 
