--- a/pricing.html
+++ b/pricing.html
@@ -100,10 +100,12 @@
     <!-- Ad‑Hoc -->
     <section class="card">
       <span class="badge">Ad‑Hoc Support (no contract)</span>
-      <div class="price">$95<span class="unit">/hour • 30‑min minimum • 15‑min billing increments</span></div>
+      <div class="price">$95<span class="unit">/hour • 15‑min minimum • 15‑min billing increments</span></div>
       <ul>
         <li><span class="dot"></span><span>Phone, email, remote assistance and onsite support when you need it.</span></li>
         <li><span class="dot"></span><span>After‑hours & weekends billed at <strong>1.5×</strong> the standard rate.</span></li>
+        <li><span class="dot"></span><span>Onsite visits have a one-hour minimum.</span></li>
+        <li><span class="dot"></span><span>Onsite travel includes the first 15 miles round-trip; additional distance is billed at <strong>$1.25/mile</strong>.</span></li>
         <li><span class="dot"></span><span>Projects, migrations, and extended onsite quoted separately.</span></li>
         <li><span class="dot"></span><span>Priority is always given to contract clients.</span></li>
       </ul>
@@ -182,6 +184,7 @@
   </main>
 </body>
 </html>
+
 
 
 
