--- a/pricing.html
+++ b/pricing.html
@@ -54,8 +54,7 @@
     .price{font-size:32px; font-weight:800; letter-spacing:.2px; margin:8px 0}
     .unit{font-size:14px; color:var(--muted); font-weight:500}
     ul{list-style:none; padding:0; margin:12px 0 0}
-    li{display:flex; gap:10px; align-items:flex-start; margin:8px 0; color:#d9e7ff}
-    .dot{width:9px; height:9px; border-radius:50%; background:var(--brand-2); margin-top:8px; box-shadow:0 0 12px rgba(56,189,248,.6)}
+    li {   display: flex;   align-items: flex-start;   gap: 10px;   margin: 8px 0;   color: #d9e7ff;   line-height: 1.5;            /* keeps even vertical rhythm */ }  .dot {   flex-shrink: 0;              /* prevents squishing in narrow columns */   width: 8px;                  /* uniform size */   height: 8px;   border-radius: 50%;   background: var(--brand-2);   margin-top: 8px;   box-shadow: 0 0 10px rgba(56,189,248,.6); }
 
     /* Footnotes / details */
     details{border:1px solid var(--line); border-radius:var(--radius-sm); padding:14px 16px; background:rgba(8,13,26,.55)}
@@ -184,6 +183,7 @@
   </main>
 </body>
 </html>
+
 
 
 
