--- a/pricing.html
+++ b/pricing.html
@@ -115,7 +115,7 @@
     </section>
 
     <!-- Plans -->
-    <h2 id="plans" style="margin:30px 6px 8px">Monthly Support Plans</h2>
+    <h2 id="plans" style="margin:30px 6px 8px">Monthly Support Plan Contracts</h2>
     <div class="grid">
       <!-- Plan 1 -->
       <article class="card">
@@ -178,11 +178,12 @@
     </section>
 
     <footer>
-      <div>KazTech LLC • North Royalton, OH • <a href="mailto:joe@kaztech99.com">joe@kaztech99.com</a></div>
+      <div>KazTech — North Royalton, OH</div>
     </footer>
   </main>
 </body>
 </html>
+
 
 
 
