--- a/pricing.html
+++ b/pricing.html
@@ -172,8 +172,8 @@
         <p style="margin-top:10px; color:#d9e7ff">Plans cover day‑to‑day troubleshooting, configuration, updates, and user support. Projects (new device rollouts, migrations, major redesigns, data recovery, cabling, etc.) are quoted separately at project rates.</p>
       </article>
       <article class="card">
-        <span class="badge">SLA quick view</span>
-        <p style="margin-top:10px; color:#d9e7ff">Response = acknowledgement and triage start, not final resolution. Critical 1 hr • High 4 hrs • Normal same business day • Low next business day.</p>
+        <span class="badge">Response Commitment</span>
+        <p style="margin-top:10px; color:#d9e7ff">When you reach out, you’ll always hear back quickly.<BR>Critical: within 1 hr • High: within 4 hrs • Normal: same business day • Low: next business day.</p>
       </article>
     </section>
 
@@ -183,6 +183,7 @@
   </main>
 </body>
 </html>
+
 
 
 
