--- a/pricing.html
+++ b/pricing.html
@@ -115,7 +115,8 @@
     </section>
 
     <!-- Plans -->
-    <h2 id="plans" style="margin:30px 6px 0">Monthly Support Plan Contracts</h2> <p style="margin:0 6px 10px; font-size:0.9rem; color:#a7b5cc; font-style:italic;">   All plans are billed monthly with a 12-month agreement term. Cancel anytime with 30-days’ notice. </p>
+    <h2 id="plans" style="margin:30px 6px 0">Monthly Support Plan Contracts</h2> 
+    <p style="margin:0 6px 10px; font-size:0.9rem; color:#a7b5cc; font-style:italic;">   All plans are billed monthly with a 12-month agreement term. Cancel anytime with 30-days’ notice. </p>
     <div class="grid">
       <!-- Plan 1 -->
       <article class="card">
@@ -183,6 +184,7 @@
   </main>
 </body>
 </html>
+
 
 
 
