--- a/managedplan.html
+++ b/managedplan.html
@@ -173,7 +173,7 @@
             <li><span class="dot"></span><span><strong>Routine maintenance</strong> (performance checks, cleanup, common stability fixes).</span></li>
             <li><span class="dot"></span><span><strong>Update management guidance</strong> (OS/app updates coordinated to reduce risk and downtime).</span></li>
             <li><span class="dot"></span><span><strong>Priority scheduling</strong> for time-sensitive issues and onsite work.</span></li>
-            <li><span class="dot"></span><span><strong>Onsite service time included</strong>: $65/month, rollover up to 3 months (max $195).</span></li>
+            <li><span class="dot"></span><span><strong>Onsite service time included</strong>: 1 hour per month, with rollover up to 3 hours total.</span></li>
           </ul>
           <p class="note" style="margin-top:10px">
             Note: Specific tools (monitoring/security/backup products) vary by environment. The goal stays the same: stable, secure, and predictable systems.
