--- a/pricing.html
+++ b/pricing.html
@@ -138,14 +138,16 @@
 
       <!-- Plan 2 -->
       <article class="card">
-        <span class="badge">Plan 2 — Hybrid</span>
-        <div class="price">$85<span class="unit"> / device / month</span></div>
-        <ul>
-          <li><span class="dot"></span><span>Everything in Remote‑First, plus a monthly onsite credit.</span></li>
-          <li><span class="dot"></span><span><strong>$65</strong> onsite credit added each month; rolls up to <strong>3 months (max $195)</strong>.</span></li>
-          <li><span class="dot"></span><span>Additional onsite billed at <strong>$65/hr</strong>; after‑hours onsite at <strong>1.5×</strong>.</span></li>
-          <li><span class="dot"></span><span>Priority scheduling for onsite work.</span></li>
-        </ul>
+        <span class="badge">Plan 2 — Managed Services</span>
+<div class="price">$125<span class="unit"> / managed device / month</span></div>
+<ul>
+  <li><span class="dot"></span><span>Everything in Remote-First, plus proactive system oversight.</span></li>
+  <li><span class="dot"></span><span>Ongoing monitoring, maintenance, and check-ins to help prevent issues before they disrupt work.</span></li>
+  <li><span class="dot"></span><span><strong>$65 monthly onsite service credit</strong> included for hands-on support.</span></li>
+  <li><span class="dot"></span><span>Credits roll for up to <strong>3 months (max $195)</strong>, making onsite visits easier to plan.</span></li>
+  <li><span class="dot"></span><span>Additional onsite billed at <strong>$65/hr</strong>; after-hours onsite at <strong>1.5×</strong>.</span></li>
+  <li><span class="dot"></span><span>Highest scheduling priority for onsite and time-sensitive work.</span></li>
+</ul>
         <div class="cta">
           <a class="btn" href="mailto:joe@kaztech99.com?subject=Sign%20up%20for%20Hybrid">Get Hybrid</a>
           <a class="btn alt" href="#hybrid-notes">How the credit works</a>
@@ -156,7 +158,7 @@
     <!-- Credit notes -->
     <section id="hybrid-notes" style="margin-top:14px" class="card">
       <details open>
-        <summary>Onsite Credit Terms (Hybrid Plan)</summary>
+        <summary>Onsite Credit Terms (Managed Services Plan)</summary>
         <ul>
           <li><span class="dot"></span><span><strong>Monthly credit:</strong> $65 onsite service credit added each billing cycle while enrolled in Hybrid. Applied to onsite labor only.</span></li>
           <li><span class="dot"></span><span><strong>Rollover:</strong> Unused credits roll for up to 3 consecutive months; the oldest credit expires as a new month is added. <em>Maximum balance $195.</em></span></li>
@@ -184,8 +186,6 @@
   </main>
 </body>
 </html>
-
-
 
 
 
