--- a/pricing.html
+++ b/pricing.html
@@ -149,7 +149,7 @@
   <li><span class="dot"></span><span>Highest scheduling priority for onsite and time-sensitive work.</span></li>
 </ul>
         <div class="cta">
-          <a class="btn" href="mailto:joe@kaztech99.com?subject=Sign%20up%20for%20Hybrid">Get Hybrid</a>
+          <a class="btn" href="/managedplan.html">More Info</a>
           <a class="btn alt" href="#hybrid-notes">How the credit works</a>
         </div>
       </article>
@@ -186,6 +186,7 @@
   </main>
 </body>
 </html>
+
 
 
 
