--- a/pricing.html
+++ b/pricing.html
@@ -143,8 +143,8 @@
 <ul>
   <li><span class="dot"></span><span>Everything in Remote-First, plus proactive system oversight.</span></li>
   <li><span class="dot"></span><span>Ongoing monitoring, maintenance, and check-ins to help prevent issues before they disrupt work.</span></li>
-  <li><span class="dot"></span><span><strong>$65 monthly onsite service credit</strong> included for hands-on support.</span></li>
-  <li><span class="dot"></span><span>Credits roll for up to <strong>3 months (max $195)</strong>, making onsite visits easier to plan.</span></li>
+  <li><span class="dot"></span><span><strong>1 hour of onsite service included each month, with rollover up to 3 hours.</strong></span></li>
+  <li><span class="dot"></span><span>(Equivalent to <strong>$65/hr</strong> of onsite labor; additional onsite billed at standard rates.)</span></li>
   <li><span class="dot"></span><span>Additional onsite billed at <strong>$65/hr</strong>; after-hours onsite at <strong>1.5×</strong>.</span></li>
   <li><span class="dot"></span><span>Highest scheduling priority for onsite and time-sensitive work.</span></li>
 </ul>
@@ -186,6 +186,7 @@
   </main>
 </body>
 </html>
+
 
 
 
